--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
     testImplementation 'org.assertj:assertj-core:3.16.1'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
